--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.64MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: zero.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: zero.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇨🇳 中国-19.53MB/s(Youtube:不良林), server: v2jp3-ws-tls.ytv2line.top, port: 48103, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2jp3-ws-tls.ytv2line.top}}
-  - {name: 🇨🇳 中国-11.16MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1011.0KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇨🇳 中国-661.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.22MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.81MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: us01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: us01.henet.cyou}}
+  - {name: 🇨🇳 中国-11.12MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-539.5KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.36MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇨🇳 中国-6.80MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
