--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-496.0KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.18MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-165.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.37MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
-  - {name: 🇨🇳 中国-539.5KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇨🇳 中国-6.80MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇸🇬 新加坡-1.90MB/s(Youtube:不良林), server: n25.emovpn.xyz, port: 1246, type: ss, cipher: chacha20-ietf-poly1305, password: 177fb4f9-f416-45e9-bd1f-4c28307be367}
-  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.196.230, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-15.31MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.04MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 台湾-13.05MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.17MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-977.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-570.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-839.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.48MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-4.48MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: f5ff683a-c1f1-4b58-a80b-b83199d86d2b, sni: 625tw.ok365.cyou, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
