--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-15.31MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.04MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 台湾-13.05MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.17MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-977.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-570.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-839.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.48MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-4.48MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: f5ff683a-c1f1-4b58-a80b-b83199d86d2b, sni: 625tw.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.14MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
+  - {name: 🇮🇳 印度-2.89MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.19MB/s(Youtube:不良林), server: v2hk3-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk3-ws-tls.ytv2line.top}}
+  - {name: 🇺🇸 美国-363.1KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.47MB/s(Youtube:不良林), server: hkaz001.xmrth-node.xyz, port: 16063, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz001.xmrth-node.xyz}}
+  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.84MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-296.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-13.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-977.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-570.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
